--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
         maven { url "https://jitpack.io" }
         //maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
         maven { url 'http://home.jundie.top:81/xwalk/maven2' }
-//        maven { url 'http://9xi4o.tk/maven2' }
+        maven { url "https://maven.aliyun.com/repository/releases" }
+        //maven { url 'http://9xi4o.tk/maven2' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
@@ -24,7 +25,8 @@ allprojects {
         mavenCentral()
         maven { url "https://jitpack.io" }
         //maven { url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2' }
-//        maven { url 'http://9xi4o.tk/maven2' }
+        //maven { url 'http://9xi4o.tk/maven2' }
+        maven { url "https://maven.aliyun.com/repository/releases" }
         maven { url 'http://home.jundie.top:81/xwalk/maven2' }
     }
 }
